About: A p5.js tropical cyclone simulation game

v20190518a:
    + Added button in new basin settings menu to control if god mode (user able to spawn storms) is enabled/disabled
        > Previously always enabled by default, but now the default setting for new basins is disabled
    * Cleaned up Basin constructor code to better accomodate new options
v20190517a:
    * Fixed major crash bug from v20190516a
v20190516a:
    * Made some miscellaneous functions methods of Basin for cleaner code
v20190508a:
    + Added Central Inland Sea map type
v20190506a:
    + Added setting for number of annual snow layers (at most 50), including disabling snow altogether
    * Fullscreen mode now matches your screen resolution, offering Cyclone Simulator in high-definition
        > Warning: Snow can take a long time to render in fullscreen mode, so a low snow layer number or disabling snow is recommended
v20190424a:
    * Pressing "F11" now toggles fullscreen mode
v20190423a:
    + Added Central Continent map type
v20190422c:
    + Added setting for the previously inaccessible shader added in v20181105a
v20190422b:
    + Added a "Map Type" option to the basin creation menu
    + Added three new map types: East Continent, West Continent, and Island Ocean
        > The existing default map type from previous versions is called Two Continents
v20190422a:
    * Fixed crash bug when selecting a newly-spawned (before first advisory) system while the info panel is open
    * Fixed crash bug when loading a basin after exiting to the main menu from another basin with the info panel open
v20190420a:
    + Added partial under-the-hood support for text input UI elements
        > includes commented-out input element on the main menu
v20190413a:
    + Added Atl 1979-1984 name list preset (original iteration of the current Atlantic naming system)
v20190412a:
    * Most likely finally fixed the HiDPI graphical bug for real this time
    % Upgraded p5.js dependency from 0.6.1 to 0.8.0
v20190411a: