@@ -1,5 +1,14 @@
 About: A p5.js tropical cyclone simulation game
 
+v20190525a:
+    * Changed how natural storm system spawning works
+        > Systems (both extratropical and tropical waves) can now spawn at any longitude
+        > Extratropical systems spawn along the jetstream
+        > Tropical waves still have a 20% tendency to spawn at the eastern edge
+        > Tropical waves no longer spawn nearly as often during off-season
+        > Systems in general spawn more frequently
+    * Rotating a mobile device between portrait and landscape now toggles fullscreen mode (?)
+    * Storms slightly less impacted by land interaction (still needs work)
 v20190518a:
     + Added button in new basin settings menu to control if god mode (user able to spawn storms) is enabled/disabled
         > Previously always enabled by default, but now the default setting for new basins is disabled
